# duckdb-acp-slack

./: README.md  pyproject.toml  slack_manifest.json
src/duckdb_acp_slack/: __init__.py
